--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 					</div>
 				</section>
 				<div class="video-module">
-					<iframe data-full="//player.vimeo.com/video/525081333?" data-src="//player.vimeo.com/video/525081333?" muted class="video-module__item"></iframe>
+					<iframe data-full="//player.vimeo.com/video/525081333?" data-src="//player.vimeo.com/video/525081333?" class="video-module__item"></iframe>
 				</div>
 				<section class="gallery">
 					<div class="gallery__container">
