--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="menu-block">
+				<div class="menu-block">
 					<div data-decor class="menu-block__container menu-block__container_wide">
 						<nav class="menu-block__menu">
 							<ul class="menu-block__list">
@@ -183,7 +183,7 @@
 					<div class="menu-block__bg">
 						<picture><source srcset="img/mainpage/menu/bg.webp" type="image/webp"><img src="img/mainpage/menu/bg.jpg" alt=""></picture>
 					</div>
-				</section>
+				</menu>
 				<section class="special">
 					<div class="special__container">
 						<div class="special__header block-header">
