--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<div class="menu-block__bg">
 						<picture><source srcset="img/mainpage/menu/bg.webp" type="image/webp"><img src="img/mainpage/menu/bg.jpg" alt=""></picture>
 					</div>
-				</menu>
+				</div>
 				<section class="special">
 					<div class="special__container">
 						<div class="special__header block-header">
