--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 					</div>
 				</section>
 				<div class="video-module">
-					<iframe data-full="//player.vimeo.com/video/525081333?" data-src="//player.vimeo.com/video/525081333?" autoplay class="video-module__item"></iframe>
+					<iframe data-full="https://player.vimeo.com/video/525081333?title=0&byline=0&portrait=0&color=3a6774&autoplay=1&loop=1&background=1" data-src="https://player.vimeo.com/video/525081333?title=0&byline=0&portrait=0&color=3a6774&autoplay=1&loop=1&background=1" autoplay class="video-module__item"></iframe>
 				</div>
 				<section class="gallery">
 					<div class="gallery__container">
